[package]
name = "nisty"
version = "0.1.0-alpha.1"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "NIST P256 signatures for Cortex-M4 microcontrollers"
repository = "https://github.com/nickray/nisty"
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]

[dependencies]
cosey = { version = "0.1.0-alpha.0", optional = true }
asn1derpy = { version = "0.1.0", optional = true }
sha2 = { version = "0.8.0", default-features = false }
# zeroize = { version = "1.1.0", default-features = false, features = ["zeroize_derive"] }

cortex-m-funnel = { version = "0.1.0-alpha.1", optional = true }
ufmt = { version = "0.1.0", optional = true}

[dependencies.micro-ecc-sys]
version = "0.3.0"

[features]
default = ["asn1-der"]
asn1-der = ["asn1derpy"]
cose = ["cosey"]
logging = ["cortex-m-funnel", "ufmt"]
no-umaal = ["micro-ecc-sys/no-umaal"]
square = ["micro-ecc-sys/square"]
