[package]
name = "nisty"
version = "0.1.0-alpha.3"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "NIST P256 signatures for Cortex-M4 microcontrollers"
repository = "https://github.com/nickray/nisty"
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]

[dependencies]
# todo: see if we can get by with `der` library
asn1derpy = { version = "0.1.0", optional = true }
cosey = { version = "0.1.0", optional = true }
sha2 = { version = "0.8.0", default-features = false }

[dependencies.micro-ecc-sys]
version = "0.3.1"

[features]
default = ["asn1-der"]
asn1-der = ["asn1derpy"]
cose = ["cosey"]
# re-introduce logging using `delog`
# logging = ["cortex-m-funnel", "ufmt"]
no-umaal = ["micro-ecc-sys/no-umaal"]
square = ["micro-ecc-sys/square"]
