[package]
name = "nisty"
version = "0.1.0-alpha.6"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "NIST P256 signatures for Cortex-M4 microcontrollers"
repository = "https://github.com/nickray/nisty"
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]

[dependencies]
cosey = { version = "0.2.0", optional = true }
der = { version = "0.2.9", features = ["big-uint", "derive"], optional = true }
heapless-bytes = { version = "0.2", optional = true }
sha2 = { version = "0.9", default-features = false }

[dependencies.micro-ecc-sys]
version = "0.3.1"

[features]
default = ["der"]
cose = ["cosey"]
asn1-der = ["der", "heapless-bytes"]
# re-introduce logging using `delog`
# logging = ["cortex-m-funnel", "ufmt"]
no-umaal = ["micro-ecc-sys/no-umaal"]
square = ["micro-ecc-sys/square"]
